organised game logic

--- a/whist/templates/whist/whist.html
+++ b/whist/templates/whist/whist.html
@@ -1,14 +1,5 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <title>WHIST 4-Players</title>
-</head>
-<body>
+{% extends 'base_template.html' %}
+{% block content %}
 
     <div class="container">
         <div class="row border border-dark">
@@ -37,14 +28,12 @@
             <div class="col border border-dark text-center">
                 <p>Board</p>
                     <p>{{ board }}</p>
-                    <form method="post">
-                        {% csrf_token %}
+                    <form method="post">{% csrf_token %}
                         {{ form.as_p }}
                         <button type="submit" class="btn btn-dark">send card</button>
                     </form>
-
                 <p>{{ card }}</p>
-                    
+
             </div>
             <div class="col border border-dark">
                 <h5>{{ player2.name }}</h5>
@@ -67,6 +56,4 @@
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
