--- a/room/templates/room/Room.html
+++ b/room/templates/room/Room.html
@@ -1,5 +1,5 @@
-<meta http-equiv="refresh" content="2">
 {% extends "base_template.html" %}
+{% load static %}
 {% block content %}
 
 <div class="container vh-100">
@@ -30,12 +30,12 @@
 {% endif %}
 <p>{{ message }}</p>
 
-{% for count in time %}
-<p>{{count}}</p>
-{% endfor %}
+{% if countdown %}
+<p id="countdown">{{ time }}</p>
+{% endif %}
 
 </div>
 </div>
 </div>
-
+<script src="{% static 'js_files/card_room_utilities.js' %}"></script>
 {% endblock %}
