--- a/room/templates/room/Room.html
+++ b/room/templates/room/Room.html
@@ -5,6 +5,8 @@
 <div class="container vh-100">
 <div class="row align-items-center text-center h-100">
 <div class="col ">
+
+{% if table_status %}
 <h5>CARD ROOM {{room_nr}}</h5>
 <h6>Players</h6>
 
@@ -29,6 +31,7 @@
 </form>
 {% endif %}
 <p>{{ message }}</p>
+{% endif %}
 
 {% if countdown %}
 <p id="countdown">{{ time }}</p>
