countdown - refresh - link to game - done

--- a/room/templates/room/Room.html
+++ b/room/templates/room/Room.html
@@ -38,6 +38,10 @@
 <p id="countdown">{{ time }}</p>
 {% endif %}
 
+{% if game_status %}
+<p>THIS IS WHERE THE GAME IS BEING HELD</p>
+{% endif %}
+
 </div>
 </div>
 </div>
