--- a/room/templates/room/Room.html
+++ b/room/templates/room/Room.html
@@ -69,7 +69,7 @@
                     <p>{{ board }}</p>
                     <form method="post">{% csrf_token %}
                         {{ form.as_p }}
-                        <button type="submit" class="btn btn-dark">send card</button>
+                        <button type="submit" name="Post_Card" class="btn btn-dark">send card</button>
                     </form>
                 <p>{{ card }}</p>
 
