--- a/src/templates/base_template.html
+++ b/src/templates/base_template.html
@@ -4,6 +4,24 @@
 <link href="{% static 'css/bootstrap.min.css' %}" type="text/css" rel="stylesheet">
 </head>
 <body>
+<div>
+<nav class="navbar navbar-dark bg-dark">
+<span class="navbar-brand mb-0 h1">doizece</span>
+<div id="navbarNav">
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link text-light" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-light" href="#">How to play</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-light" href="#">Help</a>
+      </li>
+    </ul>
+</div>
+</nav>
+</div>
 
 {% block content %}
 {% endblock %}
