linking db again

--- a/room/templates/room/Room.html
+++ b/room/templates/room/Room.html
@@ -44,23 +44,23 @@
         <div class="row border border-dark">
             <div class="col border border-dark text-center">
                 <h5>Team One Score: {{ team_1_score }}</h5>
-                <p>{{ player1.name }}, {{ player2.name }}</p>
+                <p>{{ player1 }}, {{ player2 }}</p>
             </div>
             <div class="col border border-dark text-center">
                 <h5>Team Two Score: {{ team_2_score }}</h5>
-                <p>{{ player3.name }}, {{ player4.name }}</p>
+                <p>{{ player3 }}, {{ player4 }}</p>
             </div>
         </div>
         <div class="row border border-dark">
             <div class="col border border-dark text-center">
-                <h5>{{ player1.name }}</h5>
+                <h5>{{ player1 }}</h5>
                 <p>cards: {{ player1.cards }}</p>
                 <p>tricks: {{ player1.tricks }}</p>
             </div>
         </div>
         <div class="row">
             <div class="col border border-dark">
-                <h5>{{ player4.name }}</h5>
+                <h5>{{ player4 }}</h5>
                 <p>cards: {{ player4.cards }}</p>
                 <p>tricks: {{ player4.tricks }}</p>
             </div>
@@ -75,14 +75,14 @@
 
             </div>
             <div class="col border border-dark">
-                <h5>{{ player2.name }}</h5>
+                <h5>{{ player2 }}</h5>
                 <p>cards: {{ player2.cards }}</p>
                 <p>tricks: {{ player2.tricks }}</p>
             </div>
         </div>
         <div class="row border border-dark text-center">
             <div class="col border border-dark">
-                <h5>{{ player3.name }}</h5>
+                <h5>{{ player3 }}</h5>
                 <p>cards: {{ player3.cards }}</p>
                 <p>tricks: {{ player3.tricks }}</p>
             </div>
