--- a/src/templates/base_template.html
+++ b/src/templates/base_template.html
@@ -4,11 +4,11 @@
 <link href="{% static 'css/bootstrap.min.css' %}" type="text/css" rel="stylesheet">
 </head>
 <body>
-<div>
+
 <nav class="navbar navbar-dark bg-dark">
-<span class="navbar-brand mb-0 h1">doizece</span>
-<div id="navbarNav">
-    <ul class="nav justify-content-end">
+<div class="container-fluid">
+  <span class="navbar-brand mb-0 h1">doizece</span>
+    <ul class="nav ml-auto">
       <li class="nav-item">
         <a class="nav-link text-light" href="#">Home</a>
       </li>
@@ -18,10 +18,16 @@
       <li class="nav-item">
         <a class="nav-link text-light" href="#">Help</a>
       </li>
-    </ul>
+  <li>
+  <form>
+    <button class="btn btn-sm btn-outline-light" type="button">Login</button>
+    <button class="btn btn-sm btn-success" type="button">Join</button>
+  </form>
+  </li>
+  </ul>
 </div>
 </nav>
-</div>
+
 
 {% block content %}
 {% endblock %}
