--- a/src/templates/base_template.html
+++ b/src/templates/base_template.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link href="{% static 'css/bootstrap.min.css' %}" type="text/css" rel="stylesheet">
+<link href="{% static 'css_files/page.css' %}" type="text/css" rel="stylesheet">
 </head>
 <body>
 
@@ -20,11 +21,13 @@
         <a class="nav-link text-light" href="#">Help</a>
       </li>
   <li>
-  <form>
+    {% if ceva %}
+    <a href="{% url 'logout' %}"><button class="btn btn-sm btn-danger" type="button">Logout</button></a>
+    <li class="text-light small">{{ username }}</li>
+    {% else %}
     <a href="{% url 'login' %}"><button class="btn btn-sm btn-outline-light" type="button">Login</button></a>
     <a href="{% url 'signup' %}"><button class="btn btn-sm btn-success" type="button">Join</button></a>
-    <a href="{% url 'logout' %}"><button class="btn btn-sm btn-danger" type="button">Logout</button></a>
-  </form>
+    {% endif %}
   </li>
   </ul>
 </div>
