--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -4,7 +4,7 @@
 <div class="container-fluid h-100">
     <div class="row row h-100 justify-content-center align-items-center">
         <div class="col align-items-center text-center">
-{% if not ceva %}
+{% if not request.user.is_authenticated %}
 <a href="{% url 'login'%}"><button type="button" class="btn btn-outline-success btn-lg">PLAY</button></a>
 {% else %}
 <a href="{% url 'card_rooms'%}"><button type="button" class="btn btn-outline-success btn-lg">PLAY</button></a>
