--- a/src/templates/base_template.html
+++ b/src/templates/base_template.html
@@ -10,7 +10,7 @@
 <nav class="navbar navbar-dark bg-dark">
 <div class="container-fluid">
   <span class="navbar-brand mb-0 h1">doizece</span>
-    <ul class="nav ml-auto">
+    <ul class="nav ml-auto justify-content-center">
       <li class="nav-item">
         <a class="nav-link text-light" href="{% url 'home_page' %}">Home</a>
       </li>
@@ -20,10 +20,10 @@
       <li class="nav-item">
         <a class="nav-link text-light" href="#">Help</a>
       </li>
-  <li>
-    {% if ceva %}
+  <li class="nav-item">
+    {% if request.user.is_authenticated %}
     <a href="{% url 'logout' %}"><button class="btn btn-sm btn-danger" type="button">Logout</button></a>
-    <li class="text-light small">{{ username }}</li>
+    <li class="text-light small">{{ request.user.username }}</li>
     {% else %}
     <a href="{% url 'login' %}"><button class="btn btn-sm btn-outline-light" type="button">Login</button></a>
     <a href="{% url 'signup' %}"><button class="btn btn-sm btn-success" type="button">Join</button></a>
