--- a/src/room/templates/room/Room.html
+++ b/src/room/templates/room/Room.html
@@ -1,7 +1,17 @@
 {% extends "base_template.html" %}
 {% load static %}
+{% load render_vite_bundle %}
 {% block content %}
 
+
+{% if debug %}
+<!-- This url will be different for each type of app. Point it to your main js file. -->
+<script type="module" src="http://localhost:3000/main.js"></script>
+{% else %}
+{% render_vite_bundle %}
+{% endif %}
+
+<div id="app"></div>
 <div class="container vh-100">
 <div class="row align-items-center text-center h-100">
 <div class="col ">
@@ -115,5 +125,5 @@
 
 </div>
 </div>
-<script src="{% static 'js_files/card_room_utilities.js' %}"></script>
+<!-- <script src="{% static 'js_files/card_room_utilities.js' %}"></script> -->
 {% endblock %}
