end game finished - linked django with vue finished

--- a/src/room/templates/room/room.html
+++ b/src/room/templates/room/room.html
@@ -7,7 +7,7 @@
 <div class="row align-items-center text-center h-100">
 <div class="col ">
 
-{% if table_status %}
+{% if room_status %}
 
     <h5>CARD ROOM {{room_nr}}</h5>
 
@@ -18,34 +18,28 @@
     {% endfor %}
     </ul>
 
-    {% if is_room_full %}
-        {% if register %}
-        <form method="post">
-        {% csrf_token %}
-        <input type="submit" name="Join" value="Join Table">
-        </form>
-        {% endif %}
-
-        {% if cancel %}
-        <form method="post">
-        {% csrf_token %}
-        <input id="Cancel" type="submit" name="Cancel" value="Leave Table">
-        </form>
-        {% endif %}
-        <p>{{ message }}</p>
+    {% if register %}
+    <form method="post">
+    {% csrf_token %}
+    <input type="submit" name="Join" value="Join Table">
+    </form>
     {% endif %}
 
+    {% if cancel %}
+    <form method="post">
+    {% csrf_token %}
+    <input id="Cancel" type="submit" name="Cancel" value="Leave Table">
+    </form>
+    {% endif %}
+    <p>{{ message }}</p>
+
+
 {% endif %}
 
-{% if countdown %}
-    <p id="countdown">{{ time }}</p>
-{% endif %}
-
 </div>
 </div>
 </div>
 
-<!--<script src="{% static '/js_files/card_room_utilities.js' %}"></script>-->
 {% endblock %}
 
 
