user profile image - failed to implemented it

--- a/src/profiles/templates/profiles/profile.html
+++ b/src/profiles/templates/profiles/profile.html
@@ -6,7 +6,8 @@
         <img src="{{ user.profile.avatar.url }}">
     </div>
     <div>
-        <h1>{{ user.username }}</h1>
+        <p>Test</p>
+        <h6>{{ user.username }}</h6>
     </div>
 </div>
 {% endblock %}
