--- a/src/website/templates/base_template.html
+++ b/src/website/templates/base_template.html
@@ -3,6 +3,8 @@
 <head>
 <link href="{% static 'css/bootstrap.min.css' %}" type="text/css" rel="stylesheet">
 <link href="{% static 'css_files/page.css' %}" type="text/css" rel="stylesheet">
+<link href="{% static 'profile/css/profile.css' %}" type="text/css" rel="stylesheet">
+
 
 
 {% if debug %}
