--- a/src/profiles/templates/profiles/profile.html
+++ b/src/profiles/templates/profiles/profile.html
@@ -13,8 +13,9 @@
 
 {% endif %}
 
-    <p>Test</p>
-    <h6>{{ user.username }}</h6>
+    <h1>{{ user.username }}</h1>
+    <p>Member since {{ user.registration_date }}</p>
+    <p>{{ user.points }}</p>
 
 </div>
 {% endblock %}
