--- a/src/profiles/templates/profiles/profile.html
+++ b/src/profiles/templates/profiles/profile.html
@@ -15,7 +15,7 @@
 
     <h1>{{ user.username }}</h1>
     <p>Member since {{ user.registration_date }}</p>
-    <p>{{ user.points }}</p>
+    <p>Points available {{ user.points }}</p>
 
 </div>
 {% endblock %}
