rank system added

--- a/src/profiles/templates/profiles/profile.html
+++ b/src/profiles/templates/profiles/profile.html
@@ -16,6 +16,7 @@
     <h1>{{ user.username }}</h1>
     <p>Member since {{ user.registration_date }}</p>
     <p>Points available {{ user.points }}</p>
+    <p>Rank {{ rank }}</p>
 
 </div>
 {% endblock %}
