--- a/src/website/templates/base_template.html
+++ b/src/website/templates/base_template.html
@@ -1,49 +1,80 @@
-{% load static %}
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+{% load static %}
+<!-- Bootstrap -->
 <link href="{% static 'css/bootstrap.min.css' %}" type="text/css" rel="stylesheet">
-<link href="{% static 'css_files/page.css' %}" type="text/css" rel="stylesheet">
+
+<!-- Other Stylesheets -->
 <link href="{% static 'profile/css/profile.css' %}" type="text/css" rel="stylesheet">
-
-
+<link href="{% static 'profile/css_files/global.css' %}" type="text/css" rel="stylesheet">
 
 {% if debug %}
 <script type="module" src="http://localhost:3000/@vite/client"></script>
 {% endif %}
 
 </head>
+
 <body>
 
-<section>
-<nav class="navbar navbar-dark bg-dark">
-<div class="container-fluid">
-  <span class="navbar-brand mb-0 h1">doizece</span>
-    <ul class="nav ml-auto justify-content-center">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="{% url 'home_page' %}">doizece</a>
+
+  <button class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#toggleMobileMenu"
+          aria-controls="toggleMobileMenu"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="toggleMobileMenu">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link text-light" href="{% url 'home_page' %}">Home</a>
+        <a class="nav-link" href="{% url 'home_page' %}">Play <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light" href="#">How to play</a>
+        <a class="nav-link" href="#">Learn</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Community
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light" href="#">Help</a>
+        <a class="nav-link" href="#">Help</a>
       </li>
-  <li class="nav-item">
-    {% if request.user.is_authenticated %}
-    <a href="{% url 'logout' %}"><button class="btn btn-sm btn-danger" type="button">Logout</button></a>
-    <li class="text-light small">{{ request.user.username }}</li>
-    {% else %}
-    <a href="{% url 'login' %}"><button class="btn btn-sm btn-outline-light" type="button">Login</button></a>
-    <a href="{% url 'signup' %}"><button class="btn btn-sm btn-success" type="button">Join</button></a>
-    {% endif %}
-  </li>
-  </ul>
-</div>
+
+      {% if request.user.is_authenticated %}
+      <li class="nav-item">
+      <a href="{% url 'logout' %}"><button class="btn btn-sm btn-danger" type="button">Logout</button></a>
+      <li class="text-light small">{{ request.user.username }}</li>
+      {% else %}
+      <li class="nav-item"><a class="nav-link" href="{% url 'login' %}"><button class="btn btn-sm btn-outline-light" type="button">Login</button></a></li>
+      <li class="nav-item"><a class="nav-link"  href="{% url 'signup' %}"><button class="btn btn-sm btn-success" type="button">Join</button></a></li>
+      {% endif %}
+
+    </ul>
+  </div>
 </nav>
-</section>
+
 
 {% block content %}
 {% endblock %}
 
+
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 </html>
