--- a/src/website/templates/base_template.html
+++ b/src/website/templates/base_template.html
@@ -6,11 +6,11 @@
 
 {% load static %}
 <!-- Bootstrap -->
-<link href="{% static 'css/bootstrap.min.css' %}" type="text/css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 
 <!-- Other Stylesheets -->
-<link href="{% static 'profile/css/profile.css' %}" type="text/css" rel="stylesheet">
-<link href="{% static 'profile/css_files/global.css' %}" type="text/css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="{% static 'css/profile.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css_files/global.css' %}">
 
 {% if debug %}
 <script type="module" src="http://localhost:3000/@vite/client"></script>
@@ -21,7 +21,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{% url 'home_page' %}">doizece</a>
+  <a class="navbar-brand" href="{% url 'home_page' %}">-</a>
 
   <button class="navbar-toggler"
           type="button"
@@ -58,18 +58,19 @@
       </li>
 
       {% if request.user.is_authenticated %}
-      <li class="nav-item">
-      <a href="{% url 'logout' %}"><button class="btn btn-sm btn-danger" type="button">Logout</button></a>
-      <li class="text-light small">{{ request.user.username }}</li>
+      <li class="nav-item"><a class="nav-link" href="{% url 'UserProfile' %}">{{ request.user.username }}</a></li>
+      <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
       {% else %}
-      <li class="nav-item"><a class="nav-link" href="{% url 'login' %}"><button class="btn btn-sm btn-outline-light" type="button">Login</button></a></li>
-      <li class="nav-item"><a class="nav-link"  href="{% url 'signup' %}"><button class="btn btn-sm btn-success" type="button">Join</button></a></li>
+      <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+      <li class="nav-item"><a class="nav-link"  href="{% url 'signup' %}">Join</a></li>
       {% endif %}
 
     </ul>
   </div>
 </nav>
 
+
+<h1>TEST</h1>
 
 {% block content %}
 {% endblock %}
