--- a/src/website/templates/base_template.html
+++ b/src/website/templates/base_template.html
@@ -9,7 +9,6 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 
 <!-- Other Stylesheets -->
-<link rel="stylesheet" type="text/css" href="{% static 'css/profile.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'css_files/global.css' %}">
 
 {% if debug %}
@@ -20,62 +19,58 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{% url 'home_page' %}">-</a>
+<div class="container">
+  <nav class="navbar navbar-expand-sm navbar-dark">
+    <a href="{% url 'home_page' %}" class="navbar-brand text-secondary">Name</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#toggleMobileMenu"
+      aria-controls="toggleMobileMenu"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="toggleMobileMenu">
+      <ul class="navbar-nav mr-auto">
+        <li>
+          {% if not request.user.is_authenticated %}
+          <a class="nav-link" href="{% url 'login' %}">Play</a>
+          {% else %}
+          <a class="nav-link" href="{% url 'card_rooms_list' %}">Play</a>
+          {% endif %}
+        </li>
+        <li>
+          <a class="nav-link" href="#">Learn</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#">Community</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#">Help</a>
+        </li>
+      </ul>
 
-  <button class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#toggleMobileMenu"
-          aria-controls="toggleMobileMenu"
-          aria-expanded="false"
-          aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+{% if request.user.is_authenticated %}
+<a class="nav-link navbar-text" href="{% url 'UserProfile' %}">{{ request.user.username }}</a>
+<a class="nav-link navbar-text" href="{% url 'logout' %}">Logout</a>
+{% else %}
+<a class="nav-link navbar-text" href="{% url 'login' %}">Login</a>
+<a class="nav-link navbar-text"  href="{% url 'signup' %}">Join</a>
+{% endif %}
 
-  <div class="collapse navbar-collapse" id="toggleMobileMenu">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'home_page' %}">Play <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Learn</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Community
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Help</a>
-      </li>
-
-      {% if request.user.is_authenticated %}
-      <li class="nav-item"><a class="nav-link" href="{% url 'UserProfile' %}">{{ request.user.username }}</a></li>
-      <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
-      {% else %}
-      <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
-      <li class="nav-item"><a class="nav-link"  href="{% url 'signup' %}">Join</a></li>
-      {% endif %}
-
-    </ul>
-  </div>
-</nav>
-
-
-<h1>TEST</h1>
+    </div>
+  </nav>
+</div>
 
 {% block content %}
 {% endblock %}
 
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="{% static 'js/bootstrap.bundle.min.js' %}" ></script>
+<script src="{% static 'js/bootstrap.bundle.js' %}" ></script>
 
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 </html>
