--- a/src/static/css_files/global.css
+++ b/src/static/css_files/global.css
@@ -1,4 +1,29 @@
 body {
     background-color: #333333;
+    min-height: 100vh;
 }
 
+.sticky-footer{
+    position: sticky;
+    top: 100%;
+}
+
+.container-fluid{
+    position: absolute;
+    top: 40%;
+    width: 100%;
+}
+
+.font-color{
+    color: #999999;
+}
+
+#footer-font-color{
+    font-size: x-small;
+    color: #999999;
+}
+
+#logo{
+    width: 28px;
+    height: 32px;
+}
