--- a/src/website/templates/base_template.html
+++ b/src/website/templates/base_template.html
@@ -19,39 +19,40 @@
 
 <body>
 
-<div class="container">
-  <nav class="navbar navbar-expand-sm navbar-dark">
-    <a href="{% url 'home_page' %}" class="navbar-brand text-secondary">Name</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#toggleMobileMenu"
-      aria-controls="toggleMobileMenu"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="toggleMobileMenu">
-      <ul class="navbar-nav mr-auto">
-        <li>
-          {% if not request.user.is_authenticated %}
-          <a class="nav-link" href="{% url 'login' %}">Play</a>
-          {% else %}
-          <a class="nav-link" href="{% url 'card_rooms_list' %}">Play</a>
-          {% endif %}
-        </li>
-        <li>
-          <a class="nav-link" href="#">Learn</a>
-        </li>
-        <li>
-          <a class="nav-link" href="#">Community</a>
-        </li>
-        <li>
-          <a class="nav-link" href="#">Help</a>
-        </li>
-      </ul>
+<nav class="navbar navbar-expand-sm navbar-dark">
+  <a href="{% url 'home_page' %}" class="navbar-brand">
+    <img id="logo" src="{% static 'images/logo.png'%}">
+  </a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#toggleMobileMenu"
+    aria-controls="toggleMobileMenu"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="toggleMobileMenu">
+    <ul class="navbar-nav mr-auto">
+      <li>
+        {% if not request.user.is_authenticated %}
+        <a class="nav-link" href="{% url 'login' %}">Play</a>
+        {% else %}
+        <a class="nav-link" href="{% url 'card_rooms_list' %}">Play</a>
+        {% endif %}
+      </li>
+      <li>
+        <a class="nav-link" href="#">Learn</a>
+      </li>
+      <li>
+        <a class="nav-link" href="#">Community</a>
+      </li>
+      <li>
+        <a class="nav-link" href="#">Help</a>
+      </li>
+    </ul>
 
 {% if request.user.is_authenticated %}
 <a class="nav-link navbar-text" href="{% url 'UserProfile' %}">{{ request.user.username }}</a>
@@ -60,14 +61,28 @@
 <a class="nav-link navbar-text" href="{% url 'login' %}">Login</a>
 <a class="nav-link navbar-text"  href="{% url 'signup' %}">Join</a>
 {% endif %}
+  </div>
+</nav>
 
+<main>
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="col-12 col-sm-10 col-md-8 p-2 text-center">  
+        {% block content %}
+        {% endblock %}
+      </div>
     </div>
-  </nav>
-</div>
+  </div>
+</main>
 
-{% block content %}
-{% endblock %}
 
+<footer class="sticky-footer d-flex justify-content-center py-1">
+  <section>
+    <p id="footer-font-color">&copy; 2023 Name. All rights reserved</p>
+  </section>
+</footer>
+
+<!-- Boostrap & Jquery Js -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="{% static 'js/bootstrap.bundle.min.js' %}" ></script>
 <script src="{% static 'js/bootstrap.bundle.js' %}" ></script>
