--- a/src/website/templates/base_template.html
+++ b/src/website/templates/base_template.html
@@ -10,6 +10,7 @@
 
 <!-- Other Stylesheets -->
 <link rel="stylesheet" type="text/css" href="{% static 'css_files/global.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css_files/login.css' %}">
 
 {% if debug %}
 <script type="module" src="http://localhost:3000/@vite/client"></script>
