pos & styling home & login page

--- a/src/home/templates/home/home.html
+++ b/src/home/templates/home/home.html
@@ -1,10 +1,16 @@
 {% extends 'base_template.html' %}
+{% load static %}
+
+{% block header %}
+<link rel="stylesheet" type="text/css" href="{% static 'css_files/home.css' %}">
+{% endblock %}
+
 {% block content %}
 
-{% if not request.user.is_authenticated %}
-<a href="{% url 'login'%}"><button type="button" class="btn btn-outline-success btn-lg">PLAY</button></a>
-{% else %}
-<a href="{% url 'card_rooms'%}"><button type="button" class="btn btn-outline-success btn-lg">PLAY</button></a>
-{% endif %}
+    {% if not request.user.is_authenticated %}
+    <a href="{% url 'login'%}"><button type="button" class="btn btn-outline-success btn-lg">PLAY</button></a>
+    {% else %}
+    <a href="{% url 'card_rooms'%}"><button type="button" class="btn btn-outline-success btn-lg">PLAY</button></a>
+    {% endif %}
 
 {% endblock %}
