--- a/src/userauth/templates/userauth/login.html
+++ b/src/userauth/templates/userauth/login.html
@@ -1,13 +1,19 @@
 {% extends "base_template.html" %}
+{% load static%}
+
+{% block header %}
+<link rel="stylesheet" type="text/css" href="{% static 'css_files/login.css' %}">
+{% endblock %}
+
 {% block content %}
 
-<div class="login-box font-color">
+<div class="login-box font-color text-center">
     <form class="form-group" method="post">
         {% csrf_token %}
 
         <!-- Username -->
         <label>username</label>
-        <div class="form-outline mb-4">
+        <div class="site-form form-outline mb-4">
             {{ form.username }}
         </div>
 
