--- a/src/userauth/templates/userauth/logout.html
+++ b/src/userauth/templates/userauth/logout.html
@@ -1,9 +1,12 @@
 {% extends "base_template.html" %}
 {% load static %}
 
+{% block header %}
+{% endblock %}
+
 {% block content %}
 
-<div class="text-secondary" style="display: flex; align-items: center; justify-content: center; height: 100vh;">
+<div class="font-color" style="display: flex; align-items: center; justify-content: center; height: calc(100vh - 130px);">
   <div style="text-align: center">
     <h3>Thanks for visiting our website and playing Whist with us.</h3>
     <p>We hope you had a great time and we look forward to your next visit.</p>
