--- a/src/room/templates/room/cardroom_list.html
+++ b/src/room/templates/room/cardroom_list.html
@@ -1,5 +1,10 @@
 {% extends "base_template.html" %}
 
+{% load static %}
+{% block header %}
+<link rel="stylesheet" type="text/css" href="{% static 'css_files/room_list.css' %}">
+{% endblock %}
+
 {% block content %}
 
 <table class="table table-borderless table-hover">
