--- a/src/room/templates/room/game.html
+++ b/src/room/templates/room/game.html
@@ -1,9 +1,71 @@
-{% extends "base_template.html" %}
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 {% load static %}
 {% load render_vite_bundle %}
 
-{% block content %}
+<!-- Bootstrap -->
+<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 
+<!-- Global Stylesheet -->
+<link rel="stylesheet" type="text/css" href="{% static 'css_files/global.css' %}">
+
+{% if debug %}
+<script type="module" src="http://localhost:3000/@vite/client"></script>
+{% endif %}
+
+</head>
+<body>
+
+<nav class="navbar navbar-expand-sm navbar-dark">
+  <a href="{% url 'home_page' %}" class="navbar-brand">
+    <img id="logo" src="{% static 'images/logo.png'%}">
+  </a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#toggleMobileMenu"
+    aria-controls="toggleMobileMenu"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="toggleMobileMenu">
+    <ul class="navbar-nav mr-auto">
+      <li>
+        {% if not request.user.is_authenticated %}
+        <a class="nav-link" href="{% url 'login' %}">Play</a>
+        {% else %}
+        <a class="nav-link" href="{% url 'card_rooms_list' %}">Play</a>
+        {% endif %}
+      </li>
+      <li>
+        <a class="nav-link" href="#">Learn</a>
+      </li>
+      <li>
+        <a class="nav-link" href="#">Community</a>
+      </li>
+      <li>
+        <a class="nav-link" href="#">Help</a>
+      </li>
+    </ul>
+
+{% if request.user.is_authenticated %}
+<a class="nav-link navbar-text" href="{% url 'UserProfile' %}">{{ request.user.username }}</a>
+<a class="nav-link navbar-text" href="{% url 'logout' %}">Logout</a>
+{% else %}
+<a class="nav-link navbar-text" href="{% url 'login' %}">Login</a>
+<a class="nav-link navbar-text"  href="{% url 'signup' %}">Join</a>
+{% endif %}
+  </div>
+</nav>
+
+<main>
 {% if debug %}
 <!-- This url will be different for each type of app. Point it to your main js file. -->
 <script type="module" src="http://localhost:3000/main.js"></script>
@@ -12,5 +74,7 @@
 {% endif %}
 
 <div id="app"></div>
+</main>
 
-{% endblock %}
+</body>
+</html>
