applied css style

--- a/src/userauth/templates/userauth/success_registration.html
+++ b/src/userauth/templates/userauth/success_registration.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>SUCCESS REGISTRATION</title>
-</head>
-<body>
-<h1>YOU ARE NOW REGISTERED</h1>
-<p>SOON YOU WILL BE REDIRECTED TO THE HOME</p>
-</body>
-</html>
+{% extends "base_template.html" %}
+
+{% block content %}
+
+<div class="font-color" style="display: flex; align-items: center; justify-content: center; height: calc(100vh - 130px);">
+  <div style="text-align: center">
+    <h3>Thanks for registering on our website.</h3>
+    <p>You can now start playing the game and enjoy the features we have to offer.</p>
+    <h3>Enjoy!</h3>
+  </div>
+</div>
+
+{% endblock %}
