--- a/src/room/templates/room/room.html
+++ b/src/room/templates/room/room.html
@@ -1,15 +1,15 @@
 {% extends "base_template.html" %}
 {% load static %}
 
+{% block header %}
+<link rel="stylesheet" type="text/css" href="{% static 'css_files/join.css' %}">
+{% endblock %}
+
 {% block content %}
 
-<div class="container">
-<div class="row align-items-center text-center h-100">
-<div class="col ">
-
 {% if room_status %}
-
-    <h5>CARD ROOM {{room_nr}}</h5>
+<div class="text-center font-color">
+    <h1>Room {{room_nr}}</h1>
 
     <h6>Players</h6>
     <ul class="list-unstyled">
@@ -21,24 +21,20 @@
     {% if register %}
     <form method="post">
     {% csrf_token %}
-    <input type="submit" name="Join" value="Join Table">
+    <button type="submit" name="Join" class="btn btn-outline-success btn-sm">Join Table</button>
     </form>
     {% endif %}
 
     {% if cancel %}
     <form method="post">
     {% csrf_token %}
-    <input id="Cancel" type="submit" name="Cancel" value="Leave Table">
+    <button type="submit" name="Cancel" class="btn btn-outline-danger btn-sm">Leave Table</button>
     </form>
     {% endif %}
     <p>{{ message }}</p>
-
+</div>
 
 {% endif %}
-
-</div>
-</div>
-</div>
 
 {% endblock %}
 
